# temperance

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Examples/: EoSPopulation.ipynb  get_envelopes.py
Examples/Compose/: get_eos.sh  getting_eos_from_compose.py
Examples/WeighingSamples/: weigh_samples_by_flow_de.py  weigh_samples_h5.py
temperance/: __init__.py
temperance/core/: __init__.py  properties.py  result.py  stats.py
temperance/plotting/: __init__.py  corner.py  envelope.py  get_quantiles.py
temperance/plotting/support/: quantiles_writedag.sh
temperance/sampling/: __init__.py  branched_interpolator.py  eos_prior.py
temperance/sampling/gp/: extract_process.py
temperance/sampling/parametric/: __init__.py  piecewise_polytrope.py  spectral.py  speed_of_sound.py
temperance/solving/: get_macro.sh  macro-qmc-rmf-3csv  nuclear_properties.py  solve_tov.py
temperance/utilities/: parallel.py  units.py
temperance/weighing/: __init__.py  flow.py  weigh_by_density_estimate.py  weigh_by_pulsar.py
test/core/: test_result.py
